# layer-1

./: .gitignore  CLAUDE.md  README.md  conductor.json  eval.py  extract.py  golden.md  judge_prompt.md  prompt.md  pyproject.toml  sample-obs.csv  summary.md
.claude/rules/: base-code-quality.md  base-commits.md  base-conductor.md  base-python.md  base-workflow.md  domain-llm.md  domain-postgres.md  project-quality-observations.md
docs/: framework.md
docs/superpowers/plans/: 2026-04-20-monorepo-restructure.md
docs/superpowers/specs/: 2026-04-20-monorepo-restructure-design.md
meetings/: glossary-and-evaluation.md  golden-observations-breakdown.md  summary.md
pipeline/: analysis.py  judge.py  llm.py  loader.py  models.py  report.py  schema.py  scoring.py  text.py
prompts/: extractor.md  extractor.v1.md  judge_reference_free.md  judge_reference_free.v1.md
scripts/: conductor-run.sh
scripts/calibration/: agreement.py  export.py
scripts/conductor/: archive.sh  setup.sh
tasks/: lessons.md
