[project]
name = "extraction-pipeline"
version = "0.1.0"
description = "Layered extraction pipeline for SEL teacher observations"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
core      = { workspace = true }
layer-1   = { workspace = true }
layer-1-5 = { workspace = true }

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "ruff>=0.15.9",
  "pytest>=8.0",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["core", "layer_1", "layer_1_5"]
